<resources>
    <string name="app_name">Debug</string>
    <string name="is_equal">Равно?</string>
    <string name="hello">Драсти</string>
    <string name="EnterText">Кто здесь?</string>
    <string name="switchCompat">Туда-Сюда</string>
    <string name="off">УХ</string>
    <string name="on">ЫХ</string>
    <string name="button">Не нажимать</string>
    <string name="textview">Тут могла быть ваша реклама</string>
    <string name="checkbox">Галочку видите?</string>
    <string name="toggleButton1">А вот меня нажми</string>
    <string name="toggleButtonOn">Спасибо</string>
    <string name="rb1">Браво!</string>
    <string name="rb2">Ух ты!</string>
    <string name="rb3">Класс!</string>
    <string name="rb4">Вау!</string>
    <string name="String2">Барин или барышня иль кто ещё?</string>
    <string name="String3">Как величать?</string>
    <string name="String4">И телефончик есть?</string>
    <string name="String5">Годов преклонных?</string>
    <string name="String6">А слово секретное молвить?</string>
    <string name="String7">Куда посылать?</string>
</resources>